--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+* text=auto
+*.py text eol=lf
+*.html text eol=lf
+*.css text eol=lf
